desenv_tests/test-assets/field/failure/default_value_wrong_usage_1.stderr
error: `default` modifier cannot contain a path modifier
 --> test-assets/field/failure/default_value_wrong_usage_1.rs:5:14
  |
5 |     #[desenv(default(value))]
  |              ^^^^^^^
