desenv_tests/test-assets/field/failure/default_value_wrong_usage_1.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(default(value))]
    field: String
}

fn main(){}